<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.geographyquiz.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/background"
        style="@style/appBackground"
        android:contentDescription="@string/contentdesc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/quizintro"
        android:text="@string/quizintro"
        style="@style/questionTextView"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/introMarginTop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/textBackGround" />

    <TextView
        android:id="@+id/enterNameTextview"
        android:text="@string/entername"
        style="@style/questionTextView"
        android:layout_marginTop="@dimen/introMarginTop"
        app:layout_constraintTop_toBottomOf="@+id/quizintro"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/background" />

    <EditText
        android:id="@+id/nameEditText"
        android:hint="@string/nameentry"
        style="@style/editTextStyle"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/enterNameTextview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/startButton"
        android:onClick="startQuiz"
        android:text="@string/startbutton"
        style="@style/bigButtonStyle"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        android:layout_marginBottom="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>
