<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.geographyquiz.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/background"
        style="@style/appBackground"
        android:contentDescription="@string/contentdesc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/scrollviewheight"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="120dp">
    <TextView
        android:id="@+id/summaryTextView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/presubmittext"
        android:onClick="openLink"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/questionTextView"
        android:layout_marginTop="0dp"
        android:enabled="false"/>
    </ScrollView>

    <Button
        android:id="@+id/submitButton"
        android:onClick="submit"
        android:text="@string/submit"
        style="@style/bigButtonStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp" />

    <Button
        android:id="@+id/tryAgainButton"
        android:text="@string/tryagain"
        style="@style/buttonStyle"
        android:onClick="tryAgain"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/showAnswerButton"
        style="@style/buttonStyle"
        android:text="@string/showanswer"
        android:onClick="showAnswers"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>


</android.support.constraint.ConstraintLayout>